2009-04-20  Stephen Shaw  <sshaw@decriptor.com>

	* Controller.cs: Changed _selectedPatron from just an int to a
	  Patron object

2009-04-20  Stephen Shaw  <sshaw@decriptor.com>

	* Controller.cs: fixed a typo

2009-04-20  Stephen Shaw  <sshaw@decriptor.com>

	* Controller.cs:
	* DataAccess.cs: Changed to reflect the db changes

2009-04-20  Stephen Shaw  <sshaw@decriptor.com>

	* DataAccess.cs: Removed the DataAccess interface

2009-04-20  Stephen Shaw  <sshaw@decriptor.com>

	* Media.cs:
	* Books.cs: Commented out some stuff so that it would load in
	  the gui.
	Added ListView Specific items

	* Controller.cs: Added some new events and methods for
	  refreshing all the books and media list view

	* Patrons.cs: Added ListView Specific items

2009-04-18  Stephen Shaw  <sshaw@decriptor.com>

	* DataAccess.cs: Changed dob to age
	defaults to creating the fake data now

	* LibrarySimRandom.cs: Added this class so that we can house
	  all random generating stuff in one place (fake data)

	* Patrons.cs: Changed dob to age

2009-04-18  Stephen Shaw  <sshaw@decriptor.com>

	* Config.cs:
	* DataAccess.cs: Changed the namespace

	* Media.cs:
	* Books.cs:
	* Patrons.cs: Built out most of the rest of the class as well
	  as changed the datarow stuff to use the new Tables class

	* Date.cs: Changed to namespace

2009-04-16  Stephen Shaw  <sshaw@decriptor.com>

	* DataAccess.cs: Update methods and parameters

	* Controller.cs: Moved config code into here

2009-04-16  Stephen Shaw  <sshaw@decriptor.com>

	* ChangeLog.cs: 

2009-04-16  Stephen Shaw  <sshaw@decriptor.com>

	* DataAccess.cs: Moved DataAccess to Classes

	* Date.cs: Added date class and did some simple stubbing. Not
	  sure that this will be needed.

	* Books.cs: Added book class and did some simple stubbing

	* Media.cs: Added media class and did some simple stubbing

	* Controller.cs: Added Controller class and did some building
	  out of it

	* Config.cs: Moved Config to Classes
